Un par de ajustes en el archivo de consecration.xml

--- a/app/src/main/res/values/consecration.xml
+++ b/app/src/main/res/values/consecration.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="question_mining">
-        📍¿Qué significa esta consagración total?\n
+        📍¿Qué significa la consagración?\n
 
 \nLa consagración total a San José significa que, se lleva a cabo un acto de confianza filial a este Padre espiritual, para que pueda cuidar de nuestro bienestar espiritual y llevarnos a Dios. La persona que se consagra a San José quiere estar lo más cerca posible a él, hasta el punto de parecerse en virtud y santidad.\n
 
