--- a/app/src/main/res/values/meditation_screen_text.xml
+++ b/app/src/main/res/values/meditation_screen_text.xml
@@ -6,74 +6,74 @@
 \n✝️ 1er MISTERIO: "El anuncio del ángel, de que lo concebido en María es obra del Espíritu Santo."\n
   \n🙏🏼🙏🏼REZA 7 VECES:\n
 \n👉🏼👉🏼 San José, custodio y protector de los Corazones Unidos y traspasados de Jesús y de María…\n
-\nR:/ Inflama mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
+\n▪ R:/ Inflamad mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
 \n🙏🏼🙏🏼AL FINAL DE CADA MISTERIO DI:\n
-\nJesús, José y María, os doy el corazón y el alma mía\n
+\n▪ Jesús, José y María, os doy el corazón y el alma mía\n
 
 \n✝️ 2do MISTERIO: La búsqueda de posada en Belén.\n
 \n🙏🏼🙏🏼REZA 7 VECES:\n
 \n👉🏼 San José, custodio y protector de los Corazones Unidos y traspasados de Jesús y de María...\n
-\nR:/ Inflama mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
+\n▪ R:/ Inflamad mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
 \n🙏🏼🙏🏼AL FINAL DE CADA MISTERIO DI:\n
-Jesús, José y María, os doy el corazón y el alma mía\n
+▪ Jesús, José y María, os doy el corazón y el alma mía\n
 \n
 ✝️ TERCER MISTERIO: El nacimiento del Niño Jesús en Belén.\n
 \n🙏🏼🙏🏼REZA 7 VECES:\n
 \n👉🏼 San José, custodio y protector de los Corazones Unidos y traspasados de Jesús y de María...\n
-\nR:/ Inflama mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
+\n▪ R:/ Inflamad mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
 \n🙏🏼🙏🏼AL FINAL DE CADA MISTERIO DI:\n
-\nJesús, José y María, os doy el corazón y el alma mía\n
+\n▪ Jesús, José y María, os doy el corazón y el alma mía\n
 \n
 ✝️ CUARTO MISTERIO: La presentación del Niño Jesús en el templo, ofreciendo un par de tórtolas o dos palomas.\n
 \n🙏🏼🙏🏼REZA 7 VECES:\n
 \n👉🏼 San José, custodio y protector de los Corazones Unidos y traspasados de Jesús y de María...\n
-\nR:/ Inflama mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
+\n▪ R:/ Inflamad mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
 \n🙏🏼🙏🏼AL FINAL DE CADA MISTERIO DI:\n
-\nJesús, José y María, os doy el corazón y el alma mía\n
+\n▪ Jesús, José y María, os doy el corazón y el alma mía\n
 \n
 ✝️ QUINTO MISTERIO: La huida a Egipto con Jesús y con María\n
 \n🙏🏼🙏🏼REZA 7 VECES:\n
 \n👉🏼 San José, custodio y protector de los Corazones Unidos y traspasados de Jesús y de María...\n
-\nR:/ Inflama mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
+\n▪ R:/ Inflamad mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
 \n🙏🏼🙏🏼AL FINAL DE CADA MISTERIO DI:\n
-\nJesús, José y María, os doy el corazón y el alma mía\n
+\n▪ Jesús, José y María, os doy el corazón y el alma mía\n
 \n
 ✝️SEXTO MISTERIO:  El regreso de la Sagrada Familia a Nazaret.\n
 \n🙏🏼🙏🏼REZA 7 VECES:\n
 \n👉🏼 San José, custodio y protector de los Corazones Unidos y traspasados de Jesús y de María...\n
-\nR:/ Inflama mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
+\n▪ R:/ Inflamad mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
 \n🙏🏼🙏🏼AL FINAL DE CADA MISTERIO DI:\n
-\nJesús, José y María, os doy el corazón y el alma mía\n
+\n▪ Jesús, José y María, os doy el corazón y el alma mía\n
 \n
 ✝️ SÉPTIMO MISTERIO: Jesús perdido y hallado en el templo.\n
 \n🙏🏼🙏🏼REZA 7 VECES:\n
 \n👉🏼 San José, custodio y protector de los Corazones Unidos y traspasados de Jesús y de María...\n
-\nR:/ Inflama mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
+\n▪ R:/ Inflamad mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
 \n🙏🏼🙏🏼AL FINAL DE CADA MISTERIO DI:\n
-\nJesús, José y María, os doy el corazón y el alma mía\n
+\n▪ Jesús, José y María, os doy el corazón y el alma mía\n
 \n
 ✝️OCTAVO MISTERIO: La gloriosa muerte de San José en brazos de Jesús y de María.\n
 \n🙏🏼🙏🏼REZA 7 VECES:\n
 \n👉🏼 San José, custodio y protector de los Corazones Unidos y traspasados de Jesús y de María...\n
-\nR:/ Inflama mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
+\n▪ R:/ Inflamad mi corazón para que en él solo reine mi Dios, Jesús, como reinó en tu santo corazón.\n
 \n🙏🏼🙏🏼AL FINAL DE CADA MISTERIO DI:\n
-\nJesús, José y María, os doy el corazón y el alma mía\n
+\n▪ Jesús, José y María, os doy el corazón y el alma mía\n
 \n
 ✝️✝️ Cuando hayas acabado los 8 misterios, repite 3 VECES:\n
 \n🙏🏼🙏🏼 San José, modelo y patrono de los amantes del Sagrado Corazón de Jesús\n
 R/ Ruega por nosotros</string>
 
     <string name="meditation_screen_text_letanies">LETANÍAS A SAN JOSÉ\n
-\nSeñor, ten piedad de nosotros, \nR:/Señor, ten piedad de nosotros\n
-Cristo, ten piedad de nosotros, \nR:/Cristo, ten piedad de nosotros\n
-Señor, ten piedad de nosotros, \nR:/Señor, ten piedad de nosotros\n
-Cristo, óyenos, \nR:/Cristo, óyenos\n
-Cristo, escúchanos. \nR:/Cristo, escúchanos\n
+\n▪️Señor, ten piedad de nosotros, \nR:/Señor, ten piedad de nosotros\n
+▪️Cristo, ten piedad de nosotros, \nR:/Cristo, ten piedad de nosotros\n
+▪️Señor, ten piedad de nosotros, \nR:/Señor, ten piedad de nosotros\n
+▪️Cristo, óyenos, \nR:/Cristo, óyenos\n
+▪️Cristo, escúchanos. \nR:/Cristo, escúchanos\n
 \n
-Dios Padre Celestial, \nR:/Ten misericordia de nosotros\n
-Dios Hijo, Redentor del mundo, \nR:/Ten misericordia de nosotros\n
-Dios Espíritu Santo, \nR:/Ten misericordia de nosotros\n
-Santa Trinidad, un solo Dios, \nR:/Ten misericordia de nosotros\n
+▪️Dios Padre Celestial, \nR:/Ten misericordia de nosotros\n
+▪️Dios Hijo, Redentor del mundo, \nR:/Ten misericordia de nosotros\n
+▪️Dios Espíritu Santo, \nR:/Ten misericordia de nosotros\n
+▪️Santa Trinidad, un solo Dios, \nR:/Ten misericordia de nosotros\n
 \n
 🙏🏼 San José, \nR:/Ruega por nosotros\n
 ☦ Insigne descendiente de David...\n
@@ -102,17 +102,18 @@ Santa Trinidad, un solo Dios, \nR:/Ten misericordia de nosotros\n
 🙏🏼 Protector de la Santa Iglesia...\n
 ☦ Padre de nuestra familia...\n
 \n
-Cordero de Dios, que quitas el pecado del mundo. \nR:/Perdónanos, Señor\n
-Cordero de Dios, que quitas los pecados del mundo. \nR:/Escúchanos, Señor\n
-Cordero de Dios, que quitas los pecados del mundo. \nR:/Ten misericordia de nosotros\n
+▪️Cordero de Dios, que quitas el pecado del mundo. \nR:/Perdónanos, Señor\n
+▪️Cordero de Dios, que quitas los pecados del mundo. \nR:/Escúchanos, Señor\n
+▪️Cordero de Dios, que quitas los pecados del mundo. \nR:/Ten misericordia de nosotros\n
 \n
-Le nombró administrador de su casa...\nR:/Y Príncipe de toda su posesión
-San José, protector nuestro.\nR:/Ruega por nosotros</string>
+▪️Le nombró administrador de su casa...\nR:/Y Príncipe de toda su posesión
+\n
+▪️San José, protector nuestro.\nR:/Ruega por nosotros</string>
 
     <string name="meditation_screen_text_final_pray">
     <![CDATA[🙏🏻 ORACIÓN FINAL
 
-    \n\nAcordaos, oh castísimo esposo de la Virgen María y amable protector mío San José, que jamás se ha oído decir, que ninguno haya invocado vuestra protección e implorado vuestro auxilio sin haber sido consolado. \n\nLleno, pues, de confianza en vuestro poder, ya que ejercisteis con Jesús el cargo de Padre, vengo a vuestra presencia y me encomiendo a vos con todo fervor. \n\nNo desechéis mis súplicas, antes bien acogedlas propicio y dignaos acceder a ellas piadosamente. \n\nAmén]]>
+    \n\nAcordaos, oh castísimo esposo de la Virgen María y amable protector mío San José, que jamás se ha oído decir, que ninguno haya invocado vuestra protección e implorado vuestro auxilio sin haber sido consolado. \n\nLleno, pues, de confianza en vuestro poder, ya que ejercisteis con Jesús el cargo de Padre, vengo a vuestra presencia y me encomiendo a vos con todo fervor. \n\nNo desechéis mis súplicas, antes bien acogedlas propicio y dignaos acceder a ellas piadosamente. \n\nAmén 🙏]]>
 </string>
 
 
