Ajusto las dos primeras pantallas de welcome y preparation

--- a/app/src/main/res/values/main_screen_text.xml
+++ b/app/src/main/res/values/main_screen_text.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="main_screen_text">Es un caminar, un aprendizaje... es ir a su carpintería para que él te hable al corazón ❤️\n
-te sane, te enseñe a confiar plenamente en la misericordia de su hijo Jesús ✝️.\n
-En su carpintería 🪚, San José te invita a dejar tus preocupaciones, qué te aflige, y a descansar y confiar en su intercesión.\n
-Allí encontrarás a un padre, a un amigo, a un confidente, a tu aliado en el cielo que te ama y que te invita a aprender de él y a poner tus necesidades e ilusiones en sus manos. </string>
+    <!-- Pantalla Principal -->
+    <string name="main_screen_text">✨ Es un caminar, un aprendizaje... ✨\n\nes ir a su carpintería para que él te hable al corazón ❤️\n\nte sane, te enseñe a confiar plenamente\nen la misericordia de su hijo Jesús ✝️\n\n🕊️ En su carpintería 🪚, San José te invita\na dejar tus preocupaciones, qué te aflige,\ny a descansar y confiar en su intercesión 🙏\n\n👨‍👦 Allí encontrarás a un padre, a un amigo,\na un confidente, a tu aliado en el cielo\nque te ama y que te invita a aprender de él\ny a poner tus necesidades e ilusiones en sus manos 🤲</string>
 </resources>
